# freebank-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  proxy.py  tsconfig.json  vite.config.ts
public/: manifest.json  sw.js
src/: App.svelte  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/rpc/: mod.rs
src/components/: BalanceCard.svelte  TransactionItem.svelte
src/lib/: api.ts  brand.ts
src/styles/: app.css
